<?xml version="1.0"?>
<package format="2">
  <name>clustering_with_ids</name>
  <version>1.0.0</version>
  <description>The clustering_with_ids package</description>

  <maintainer email="johnmax1996@gmail.com">grvc</maintainer>
  <author> Ioannis Machaliotis</author>	
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dvs_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>OpenCV</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dvs_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>OpenCV</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dvs_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>OpenCV</exec_depend>

</package>
